<resources>
    <string name="app_name">calculator</string>
    <string name="calculator_heading">Calculator</string>
    <string name="first_number">Enter first number</string>
    <string name="second_number">Enter second number</string>
    <string name="add_button">+</string>
    <string name="subtract_button">-</string>
    <string name="multiply_button">*</string>
    <string name="divide_button">/</string>
</resources>
