<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_heading"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/divButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:text="@string/divide_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/multButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multButton" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/subtract_button"
        app:layout_constraintEnd_toStartOf="@+id/multButton"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/secondNumber" />

    <Button
        android:id="@+id/multButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiply_button"
        app:layout_constraintEnd_toStartOf="@+id/divButton"
        app:layout_constraintStart_toEndOf="@+id/subButton"
        app:layout_constraintTop_toTopOf="@+id/subButton" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/add_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/subButton"
        app:layout_constraintEnd_toStartOf="@+id/subButton"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/first_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/second_number"
        app:layout_constraintEnd_toEndOf="@+id/subButton"
        app:layout_constraintStart_toEndOf="@+id/subButton"
        app:layout_constraintTop_toBottomOf="@+id/firstNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>